# wxformbuilder-haxeui

./: .gitignore  CMakeLists.txt  Makefile  README.md  premake.lua  run.sh
output/: license.txt
plugins/additional/: Makefile  additional.cpp
plugins/common/: Makefile  common.cpp
plugins/containers/: Makefile  bookutils.h  containers.cpp
plugins/layout/: Makefile  layout.cpp
plugins/wxAdditions/: Makefile  premake.lua  wxAdditions_mini.cpp
sdk/plugin_interface/: Makefile  component.h  default.xpm  fontcontainer.h  plugin.h  xrcconv.cpp  xrcconv.h
sdk/tinyxml/: Makefile  ticpp.cpp  ticpp.h
src/: Makefile  maingui.cpp  maingui.h  pch.h  premake.lua  wxFormBuilder.rc
src/codegen/: codegen.cpp  codegen.h  codewriter.cpp  codewriter.h  cppcg.cpp  cppcg.h  xrccg.cpp  xrccg.h
src/controls/: README.txt
src/model/: database.cpp  database.h  objectbase.cpp  objectbase.h  types.cpp  types.h  xrcfilter.cpp  xrcfilter.h
src/rad/: about.cpp  about.h  appdata.cpp  appdata.h  bitmaps.cpp  bitmaps.h  cmdproc.cpp  cmdproc.h  customkeys.cpp  customkeys.h  genericpanel.cpp  genericpanel.h  mainframe.cpp  mainframe.h  menueditor.cpp  menueditor.h  palette.cpp  palette.h  title.cpp  title.h  wxfbevent.cpp  wxfbevent.h  wxfbmanager.cpp  (+1 more)
wxfbTest/: app.cpp  app.h  event_GUI.cpp  event_GUI.h  main.cpp  main.h  wxFBEventAdditionalPanel.cpp  wxFBEventAdditionalPanel.h  wxFBEventCommonPanel.cpp  wxFBEventCommonPanel.h  wxFBEventMainFrame.cpp  wxFBEventMainFrame.h  wxFBEvents.cbp  wx_pch.h  wxfbEvent.fbp  wxfbTest-unix.cbp  wxfbTest.cbp  wxfbTest.fbp  wxfbTest.rc  wxfbTest_GUI.h
(+62 files in other folders)
